--- a/ModelGraph/ModelGraph/Views/SettingsPage.xaml
+++ b/ModelGraph/ModelGraph/Views/SettingsPage.xaml
@@ -11,7 +11,7 @@
     <Page.Resources>
         <helper:EnumToBooleanConverter x:Key="EnumToBooleanConverter" EnumType="ElementTheme" />
     </Page.Resources>
-    <Grid Margin="{StaticResource MediumLeftRightMargin}">
+    <Grid>
         <StackPanel
             x:Name="ContentArea">
             <TextBlock
