--- a/ModelGraph/ModelGraph/Controls/ModelTree/ModelTreeControl.xaml
+++ b/ModelGraph/ModelGraph/Controls/ModelTree/ModelTreeControl.xaml
@@ -3,10 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"    
     mc:Ignorable="d"
     d:DesignHeight="320"
-    d:DesignWidth="320">
+    d:DesignWidth="320"
+    KeyboardAcceleratorPlacementMode="Hidden">
 
     <Page.Resources>
 
@@ -531,6 +532,17 @@
             <Setter Property="MinHeight" Value="{StaticResource ElementHieght}"/>
         </Style>
 
+        <Style x:Key="ItemHasErrorStyle" TargetType="TextBlock">
+            <Setter Property="MinWidth" Value="20" />
+            <Setter Property="Margin" Value="16,0,0,0" />
+            <Setter Property="Padding" Value="0,4,0,0" />
+            <Setter Property="Foreground" Value="Firebrick" />
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="TextAlignment" Value="Center" />
+            <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
+            <Setter Property="MinHeight" Value="{StaticResource ElementHieght}"/>
+        </Style>
 
         <Style x:Key="FilterTextStyle" TargetType="TextBox">
             <Setter Property="MinHeight" Value="{StaticResource ElementHieght}"/>
@@ -608,34 +620,54 @@
 
         <Grid Grid.Row="1" x:Name="ControlGrid" >
             <Canvas x:Name="TreeCanvas" Style="{StaticResource TreeCanvasStyle}" Loaded="TreeCanvas_Loaded" PointerPressed="TreeGrid_PointerPressed" PointerWheelChanged="TreeCanvas_PointerWheelChanged">
-                <Grid x:Name="SelectionGrid" Width="{Binding ElementName=TreeCanvas, Path=ActualWidth}" Height="{StaticResource ElementHieght}" Background="#CCFFF29D" >
-                    <Button x:Name="KeyButton" Background="#CCFFF29D" Width="2" Height="20" KeyDown="KeyButton_KeyDown" KeyUp="KeyButton_KeyUp" LostFocus="KeyButton_LostFocus" HorizontalAlignment="Left"/>
-                    <StackPanel x:Name="ButtonStack" Orientation="Horizontal" HorizontalAlignment="Right">
-                        <Button x:Name="HelpButton" x:Uid="HelpButton" Style="{StaticResource HelpButtonStyle}" >
-                            <Button.Flyout>
-                                <Flyout>
-                                    <RichTextBlock x:Name="ItemHelp" MaxWidth="320" Margin="0" Padding="0"/>
-                                </Flyout>
-                            </Button.Flyout>
-                        </Button>
-                        <Button x:Name="ItemButton1" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
-                        <Button x:Name="ItemButton2" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
-                        <Button x:Name="ItemButton3" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
-                        <Button x:Name="MenuButton"  x:Uid="MenuButton"  Style="{StaticResource ItemButtonStyle}" >
-                            <Button.Flyout>
-                                <MenuFlyout Opening="MenuFlyout_Opening">
-                                    <MenuFlyoutItem x:Name="MenuItem1" Click="MenuItem_Click" />
-                                    <MenuFlyoutItem x:Name="MenuItem2" Click="MenuItem_Click" />
-                                    <MenuFlyoutItem x:Name="MenuItem3" Click="MenuItem_Click" />
-                                    <MenuFlyoutItem x:Name="MenuItem4" Click="MenuItem_Click" />
-                                    <MenuFlyoutItem x:Name="MenuItem5" Click="MenuItem_Click" />
-                                    <MenuFlyoutItem x:Name="MenuItem6" Click="MenuItem_Click" />
-                                </MenuFlyout>
-                            </Button.Flyout>
-                            <FontIcon  FontFamily="Segoe UI" Glyph="&#x22EF;" FontSize="20" />
-                        </Button>
-                        <!--<Button x:Name="TailButton" Width="2" Margin="10,0,0,0"  Height="{StaticResource ElementHieght}" KeyDown="TailButton_KeyDown" KeyUp="TailButton_KeyUp" LostFocus="TailButton_LostFocus"/>-->
-                    </StackPanel>
+                
+                <Canvas.KeyboardAccelerators>
+                    <KeyboardAccelerator Key="PageUp" Invoked="KeyPageUp_Invoked"/>
+                    <KeyboardAccelerator Key="PageDown" Invoked="KeyPageDown_Invoked"/>
+                    
+                    <KeyboardAccelerator Key="Up" Invoked="KeyUp_Invoked"/>
+                    <KeyboardAccelerator Key="Down" Invoked="KeyDown_Invoked"/>
+
+                    <KeyboardAccelerator Key="Left" Invoked="KeyLeft_Invoked"/>
+                    <KeyboardAccelerator Key="Right" Invoked="KeyRight_Invoked"/>
+
+                    <KeyboardAccelerator Key="End" Invoked="KeyEnd_Invoked"/>
+                    <KeyboardAccelerator Key="Home" Invoked="KeyHome_Invoked"/>
+                    <KeyboardAccelerator Key="Escape" Invoked="KeyEscape_Invoked"/>
+
+                    <KeyboardAccelerator Key="Insert" Invoked="KeyInsert_Invoked"/>
+                    <KeyboardAccelerator Key="Delete" Invoked="KeyDelete_Invoked"/>
+
+                    <KeyboardAccelerator Key="Menu" Invoked="KeyMenu_Invoked"/>
+                </Canvas.KeyboardAccelerators>
+                
+                <Grid x:Name="SelectionGrid" Width="{Binding ElementName=TreeCanvas, Path=ActualWidth}" Height="{StaticResource ElementHieght}" Background="#FFD8EFF9" >
+                        <StackPanel x:Name="ButtonStack" Orientation="Horizontal" HorizontalAlignment="Right">
+                            <Button x:Name="HelpButton" x:Uid="HelpButton" Style="{StaticResource HelpButtonStyle}" >
+                                <Button.Flyout>
+                                    <Flyout>
+                                        <RichTextBlock x:Name="ItemHelp" MaxWidth="320" Margin="0" Padding="0"/>
+                                    </Flyout>
+                                </Button.Flyout>
+                            </Button>
+                            <Button x:Name="ItemButton1" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
+                            <Button x:Name="ItemButton2" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
+                            <Button x:Name="ItemButton3" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
+                            <Button x:Name="MenuButton"  x:Uid="MenuButton"  Style="{StaticResource ItemButtonStyle}" >
+                                <Button.Flyout>
+                                    <MenuFlyout Opening="MenuFlyout_Opening">
+                                        <MenuFlyoutItem x:Name="MenuItem1" Click="MenuItem_Click" />
+                                        <MenuFlyoutItem x:Name="MenuItem2" Click="MenuItem_Click" />
+                                        <MenuFlyoutItem x:Name="MenuItem3" Click="MenuItem_Click" />
+                                        <MenuFlyoutItem x:Name="MenuItem4" Click="MenuItem_Click" />
+                                        <MenuFlyoutItem x:Name="MenuItem5" Click="MenuItem_Click" />
+                                        <MenuFlyoutItem x:Name="MenuItem6" Click="MenuItem_Click" />
+                                    </MenuFlyout>
+                                </Button.Flyout>
+                                <FontIcon  FontFamily="Segoe UI" Glyph="&#x22EF;" FontSize="20" />
+                            </Button>
+                            <!--<Button x:Name="TailButton" Width="2" Margin="10,0,0,0"  Height="{StaticResource ElementHieght}" KeyDown="TailButton_KeyDown" KeyUp="TailButton_KeyUp" LostFocus="TailButton_LostFocus"/>-->
+                        </StackPanel>
                 </Grid>
             </Canvas>
 
